# lambda_integrate

./: .gitignore  LICENSE  Makefile  README.md  app.py  buildspec.yml  createtable.py  pipeline.json  pyproject.toml  pyvenv.cfg  requirements.txt  sqs_producer.py
.chalice/: config.json
chalicelib/: db.py  slack.py
legacy/: my_app.py  slack.py
test/: __init__.py  conftest.py  test_lambda_integrate.py
